--- a/views/timetable.erb
+++ b/views/timetable.erb
@@ -12,8 +12,8 @@
           <th class="time-nonr positionsticky"></th>
         </tr>
         <!-- 9:00 -->
-        <tr>
-          <th rowspan="12" class="time-time">9:00</th>
+        <tr class="clearfix">
+          <th rowspan="12" class="time-timel">9:00</th>
           <td rowspan="8" class="time-event-left">個人演奏１</td>
           <td></td>
           <td></td>
@@ -21,7 +21,7 @@
           <td></td>
           <td></td>
           <td></td>
-          <th rowspan="12" class="time-time">9:00</th>
+          <th rowspan="12" class="time-timer">9:00</th>
         </tr>
         <tr>
           <td></td>
@@ -111,13 +111,13 @@
         </tr>
         <!-- 10:00 -->
         <tr>
-          <th rowspan="12" class="time-time">10:00</th>
+          <th rowspan="12" class="time-timel">10:00</th>
           <td></td>
           <td></td>
           <td></td>
           <td></td>
           <td></td>
-          <th rowspan="12" class="time-time">10:00</th>
+          <th rowspan="12" class="time-timer">10:00</th>
         </tr>
         <tr>
           <td></td>
@@ -208,7 +208,7 @@
         </tr>
         <!-- 11:00 -->
         <tr>
-          <th rowspan="12" class="time-time">11:00</th>
+          <th rowspan="12" class="time-timel">11:00</th>
           <td></td>
           <td></td>
           <td></td>
@@ -216,7 +216,7 @@
           <td rowspan="8" class="time-event">連続爆破事件<br>からの脱出<br>2</td>
           <td rowspan="4" class="time-event">とある秘密倉庫<br>からの脱出<br>2</td>
           <td></td>
-          <th rowspan="12" class="time-time">11:00</th>
+          <th rowspan="12" class="time-timer">11:00</th>
         </tr>
         <tr>
           <td rowspan="6" class="time-event-left">2年クラス合唱</td>
@@ -238,6 +238,7 @@
           <td></td>
         </tr>
         <tr>
+          <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -294,11 +295,11 @@
         </tr>
         <!-- 12:00 -->
         <tr>
-          <th rowspan="12" class="time-time">12:00</th>
+          <th rowspan="12" class="time-timel">12:00</th>
           <td></td>
           <td rowspan="4" class="time-event">とある秘密倉庫<br>からの脱出<br>3</td>
           <td rowspan="12" class="time-event">Xｰmodel<br>ADDITIONAL<br>LIVE<br>2023</td>
-          <th rowspan="12" class="time-time">12:00</th>
+          <th rowspan="12" class="time-timer">12:00</th>
         </tr>
         <tr>
           <td></td>
@@ -368,13 +369,13 @@
         </tr>
         <!-- 13:00 -->
         <tr>
-          <th rowspan="12" class="time-time">13:00</th>
+          <th rowspan="12" class="time-timel">13:00</th>
           <td rowspan="2" class="time-event">歌唱<br>「点描の歌」</td>
           <td></td>
           <td></td>
           <td></td>
           <td></td>
-          <th rowspan="12" class="time-time">13:00</th>
+          <th rowspan="12" class="time-timer">13:00</th>
         </tr>
         <tr>
           <td></td>
@@ -457,14 +458,14 @@
         </tr>
         <!-- 14:00 -->
         <tr>
-          <th rowspan="12" class="time-time">14:00</th>
+          <th rowspan="12" class="time-timel time-bot">14:00</th>
           <td></td>
           <td rowspan="2" class="time-event">ダンス<br>「DNA」</td>
           <td></td>
           <td></td>
           <td rowspan="4" class="time-event">とある秘密倉庫<br>からの脱出<br>6</td>
           <td></td>
-          <th rowspan="12" class="time-time">14:00</th>
+          <th rowspan="12" class="time-timer time-bot">14:00</th>
         </tr>
         <tr>
           <td></td>
@@ -493,6 +494,7 @@
           <td></td>
           <td></td>
           <td rowspan="8" class="time-event">連続爆破事件<br>からの脱出<br>6</td>
+          <td></td>
           <td></td>
         </tr>
         <tr>
@@ -547,4 +549,4 @@
           <td></td>
           <td></td>
         </tr>
-      </table>  
+      </table> 
