--- a/views/timetable.erb
+++ b/views/timetable.erb
@@ -5,7 +5,7 @@
           <td class="time-title positionsticky" >講堂</td>
           <td class="time-title positionsticky">中央<br>ステージ</td>
           <td class="time-title positionsticky">バンド</td>
-          <td class="time-title positionsticky">ルーム<br>コンテスト</td>
+          <td class="time-title positionsticky">ルーム<br>コンサート</td>
           <td class="time-title positionsticky">2A</td>
           <td class="time-title positionsticky">2B</td>
           <td class="time-title positionsticky">視聴覚室</td>
