--- a/public/assets/css/timetable.css
+++ b/public/assets/css/timetable.css
@@ -2,8 +2,8 @@
   background-color: #191919;
 }
 .time-table {
-  width: 80%;
-  box-shadow: 0px 0px 10px 10px #f0f0f0;
+  width: 78%;
+  box-shadow: 0px 0px 20px 20px #f0f0f0;
   margin: auto;
   /* table-layout: fixed; */
   border-collapse: collapse;
@@ -37,7 +37,7 @@
   font-weight: bolder;
 }
 .time-event {
-  border : 1px solid rgb(144,144,144);
+  /* border : 1px solid rgb(144,144,144); */
   border-radius: 20px ;
   font-size: 16px;
   font-weight: bolder;
