--- a/public/assets/css/circle.css
+++ b/public/assets/css/circle.css
@@ -1,11 +1,14 @@
 .container{
     display: flex;
-    margin: 0 auto;
+    width: 80%;
+    float: left;
+    flex-wrap: wrap;
+    margin: 0 10%;
 }
 .circle_name{
-    width: 500px;
+    width: 450px;
     height: 300px;
-    background-color: black;
+    background-color: #191919;
     color: aliceblue;
     margin: 10px;
     padding: 10px;
