--- a/views/timetable.erb
+++ b/views/timetable.erb
@@ -475,7 +475,7 @@
         </tr>
         <tr>
           <td></td>
-          <td rowspan="2" class="time-event">ダンス<br>カンナムスタイル</td>
+          <td rowspan="2" class="time-event">ダンス<br>Gangnam style</td>
           <td></td>
           <td></td>
           <td></td>
