--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5,6 +5,9 @@
 html,body{
     height:100%;
 }
+font-family: "makinas-4-square", sans-serif;
+font-weight: 400;
+font-style: normal;
 ul li a {
   color: gray;
   display: block;
