--- a/views/layout.erb
+++ b/views/layout.erb
@@ -9,10 +9,11 @@
   <link rel="stylesheet" href="/assets/css/circle.css">
   <link rel="stylesheet" href="/assets/css/map.css">
   <link rel="stylesheet" href="/assets/css/message.css">
-  <link rel="stylesheet" href="/assets/css/timetable.css">
+
   <link rel="stylesheet" href="/assets/css/style.css">
   <link rel="stylesheet" href="/assets/css/reset.css">
   <link rel="stylesheet" href="/assets/css/layout.css">
+
   <link rel="fonr" href="/assets/fonts/def/fgm.ttf">
   <link href="https://use.fontawesome.com/releases/v6.3.0/css/all.css" rel="stylesheet">
   <script defer src="https://use.fontawesome.com/releases/v6.3.0/js/all.js"></script>
@@ -30,6 +31,7 @@
           <li><a href="/map">Map</a></li>
           <li><a href="/timetable">Timetable</a></li>
           <li><a href="/circle">Circles</a></li>
+          <li><a href="/member">Members</a></li>
         </ul>
     </nav>
   </div>
