--- a/views/index.erb
+++ b/views/index.erb
@@ -7,6 +7,7 @@
       <script src="/assets/javascript/particles.js"></script>
       <script src="/assets/javascript/javascript.js"></script>
       </div>
+<div class="index-main">
     <div class="date">
      <p class="main-date">9.23</p>
      <p class="sub-date">9:00~15:00</p>
@@ -16,4 +17,5 @@
     <div class="count-countdown">
     <span id="countdown"></span>
     </div>
+</div>
 </div>
