--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/assets/css/style.css">
+
   <link rel="stylesheet" href="/assets/css/access.css">
   <link rel="stylesheet" href="/assets/css/circle.css">
   <link rel="stylesheet" href="/assets/css/map.css">
@@ -23,8 +23,8 @@
 </head>
 <body>
   <div class="top">
-    <nav>
-        <ul>
+    <nav class="layout-nav">
+        <ul class="layout-ul">
           <li><a href="/">Home</a></li>
           <li><a href="/message">Message</a></li>
           <li><a href="/access">Access</a></li>
@@ -38,7 +38,6 @@
     
     
       <div class="yield-main">
-      <img href="/assets/images/background.webp" class="bacimg">
         <%= yield %>
       </div>
 </body>
