--- a/views/layout.erb
+++ b/views/layout.erb
@@ -40,6 +40,9 @@
       <div class="yield-main">
         <%= yield %>
       </div>
+      <div class="footer">
+      
+      </div>
 </body>
 </html>
 
