--- a/public/assets/css/timetable.css
+++ b/public/assets/css/timetable.css
@@ -9,6 +9,8 @@
   border-collapse: collapse;
   word-wrap: break-word;
   background-color: rgb(144,144,144);
+  font-family: "square", sans-serif;
+  font-family: "makinas-4-square";
 }
 .time-timel {
   border-top: 1px solid #111111;
@@ -20,21 +22,23 @@
   text-align: center;
   background-color: whitesmoke;
   vertical-align: top;
-  font-family :'Arial Narrow Bold', sans-serif;
+  /* font-family :'Arial Narrow Bold', sans-serif; */
   font-weight: bolder;
+  font-family: "makinas-4-square";
 }
 .time-timer {
   border-top: 1px solid #111111;
   border-right: 1px solid whitesmoke;
   width: 25px;
   font-size:15px;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  /* font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
   color: black;
   text-align: center;
   background-color: whitesmoke;
   vertical-align: top;
-  font-family :'Arial Narrow Bold', sans-serif;
+  /* font-family :'Arial Narrow Bold', sans-serif; */
   font-weight: bolder;
+  font-family: "makinas-4-square";
 }
 .time-event {
   /* border : 1px solid rgb(144,144,144); */
@@ -53,9 +57,10 @@
   /* border-top : 1px solid whitesmoke;  */
   border-bottom: 1px solid rgb(144,144,144);
   border-radius: 30px;
-  font-family:"MS Pゴシック", sans-serif;
+  /* font-family:"MS Pゴシック", sans-serif; */
   font-weight: bolder;
   box-shadow: 0px 0px 5px 5px rgb(144,144,144);
+  font-family: "makinas-4-square";
 
 }
 .positionsticky{
@@ -66,8 +71,9 @@
   text-align: center;
   color:#05c8e6;
   font-size: 400%;
-  font-family :'Arial Narrow Bold', sans-serif;
+  /* font-family :'Arial Narrow Bold', sans-serif; */
   font-weight: bolder;
+  font-family: "makinas-4-square";
 }
 .time-nonl{
   background-color: whitesmoke;
@@ -104,4 +110,7 @@
 }
 .time-bot{
   border-bottom: 1px solid whitesmoke;
+}
+td{
+  font-family: "makinas-4-square";
 }
