--- a/public/assets/css/circle.css
+++ b/public/assets/css/circle.css
@@ -1,7 +1,7 @@
 .container{
     display: flex;
     width: 80%;
-    float: left;
+    /* float: left; */
     flex-wrap: wrap;
     margin: 0 10%;
 }
