--- a/views/member.erb
+++ b/views/member.erb
@@ -24,7 +24,7 @@
         <tr><td>校内謎解き</td><td>中野太貴・嶋本</td></tr>
         <tr><td>運動場</td><td>新名凱斗・田中<small>新</small></td></tr>
         <tr><td>高校入試</td><td>浦田晃成・川合・大木</td></tr>
-        <tr><td>中央ステージ</td><td>大原尚人・實方・西阪</td></tr>
+        <tr><td>中央ステージ</td><td>大原尚士・實方・西阪</td></tr>
         <tr><td>校内装飾</td><td>渋谷興央・西阪</td></tr>
         <tr><td>モニュメント</td><td>大原己成・西阪</td></tr>
         <tr><td>広報</td><td>延原剛行・田畑・田中<small>新</small>・西本・赤曽部</td></tr>
@@ -43,7 +43,7 @@
       <table id="members_table">
         <tr><td>デザイナー</td><td>西本匠</td></tr>
         <tr><td>クリエイティブチーム</td><td>延原剛行・西本・田畑</td></tr>
-        <tr><td>HP作成</td><td>高垣翔太・小松<small>祐</small>・坂田・前田・田中<small>新</small></td></tr>
+        <tr><td>HP作成</td><td>高垣翔太・小松<small>祐</small>・坂田・前田・神崎・田中<small>新</small></td></tr>
         <tr><td>事務局員</td><td>小松<small>冬</small>・椿・楊・鏑木・中島</td></tr>
         
         
