--- a/views/buturibu.erb
+++ b/views/buturibu.erb
@@ -1,10 +1,23 @@
-               <h3 class="circle_name">
-                  <span>1</span>
-                  "物理部"
-                  <a href="/buturibu">aaaaa</a>
-               <h3>
-               <div class="circle_b">
-                   <p class="circle_images">
-                      <img src="/assets/images/circle/buturi.png" alt="物理部">
-                   </p>
-               </div>
+<script>
+      (function(d) {
+        var config = {
+          kitId: 'bsw3okh',
+          scriptTimeout: 3000,
+          async: true
+        },
+        h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
+      })(document);
+    </script>
+<div class="circle-main">
+   <div class="circle-top">
+      <div class="circle-images">
+         <img src="/assets/images/circle/buturi.png" alt="物理部">
+      </div>
+      <h1 class="circle-name">
+        物理部
+      </h1>
+      <div class="circle-location">
+      </div>
+   </div>
+
+</div>
