--- a/public/assets/css/circle.css
+++ b/public/assets/css/circle.css
@@ -24,6 +24,9 @@
     max-width: 300px;
     margin: 0 auto;
 }
+.circle-img{
+    max-width: 300px;
+}
 .meta-button{
     display: block;
     font-size: 1.2rem;
