--- a/views/circle.erb
+++ b/views/circle.erb
@@ -1,7 +1,7 @@
     <div class="container">
-        <div class="circle_name">
+        <div class="circle-name">
             <p class="circle_p_name">物理部</p>
-            <a href="/buturibu"><img src="/assets/images/circle/buturi.png"></a>
+            <a href="/buturibu"><img src="/assets/images/circle/buturi.png" class="circle-img"></a>
         </div>
         <div class="circle_name">
             <p class="circle_p_name">生物部</p>
