top部分をスクロール反応しないようにしました

--- a/public/assets/css/layout.css
+++ b/public/assets/css/layout.css
@@ -5,6 +5,7 @@
   background-position:50% 50%;
   background-size:1464px 728px;
   background-attachment: fixed;
+  margin-top:50px;
 }
 
 @font-face {
