--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -19,6 +19,12 @@ html,body{
     background-color: white;
     width: 100%;
     height: 50px;
+    position: fixed;
+      left: 0px;
+      right: 0px;
+      top: 0px;
+      bottom:0px;
+    z-index:100;
 }
 .layout-ul li {
     list-style: none;
