--- a/views/map.erb
+++ b/views/map.erb
@@ -4,7 +4,7 @@
         }
 
         .button {
-            margin: 5px;
+            border:3px solid gray;
         }
 
         .content {
@@ -17,15 +17,15 @@
 <body>
 
 <div class="button-container">
-    <button class="button" onclick="showDiv(1)" id="button1">1</button>
-    <button class="button" onclick="showDiv(2)" id="button2">2</button>
-    <button class="button" onclick="showDiv(3)" id="button3">3</button>
-    <button class="button" onclick="showDiv(4)" id="button4">4</button>
-    <button class="button" onclick="showDiv(5)" id="button5">5</button>
-    <button class="button" onclick="showDiv(6)" id="button6">6</button>
+    <button class="button" onclick="showDiv(1)" id="button1">南1F</button>
+    <button class="button" onclick="showDiv(2)" id="button2">南2F/北1F</button>
+    <button class="button" onclick="showDiv(3)" id="button3">南3F/北2F</button>
+    <button class="button" onclick="showDiv(4)" id="button4">南4F/北3F</button>
+    <button class="button" onclick="showDiv(5)" id="button5">北4F</button>
+    <button class="button" onclick="showDiv(6)" id="button6">運動場</button>
 </div>
 
-<div id="content1" class="content" style="display: block;">コンテンツ1</div>
+<div id="content1" class="content" style="display: block;"><p class="map-text">ここにマップを表示</p></div>
 <div id="content2" class="content">コンテンツ2</div>
 <div id="content3" class="content">コンテンツ3</div>
 <div id="content4" class="content">コンテンツ4</div>
