マップ画像追加

--- a/views/map.erb
+++ b/views/map.erb
@@ -17,7 +17,7 @@
         <h1 class="map-title">校内地図</h1>
         <div class="map">
             <div class="map-image">
-                <div id="content1" class="map-content" style="display: block;"><p class="map-text">ここにマップを表示</p></div>
+                <div id="content1" class="map-content" style="display: block;"><img src="/assets/images/map/1.webp" class="each-map"></div>
                 <div id="content2" class="map-content">コンテンツ2</div>
                 <div id="content3" class="map-content">コンテンツ3</div>
                 <div id="content4" class="map-content">コンテンツ4</div>
