--- a/views/timetable.erb
+++ b/views/timetable.erb
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="/assets/css/timetable.css">
 <h1 class="time-midasi">TIME TABLE</h1>
       <div class="time-first">
         <table class="time-table">
