--- a/views/access.erb
+++ b/views/access.erb
@@ -41,7 +41,7 @@
   <img src="/assets/images/Screenshot_20230910-152159.png" class="access-image">
   <p class="access-text">階段を上ります</p></div>
   <div class="each-train">  <img src="/assets/images/Screenshot_20230910-152309.png" class="access-image">
-  <p class="access-text">上った先を右に曲がります</p></div>
+  <p class="access-text">上った先を<b>右</b>に曲がります</p></div>
   <div class="each-train">  <img src="/assets/images/Screenshot_20230910-152356.png" class="access-image">
   <p class="access-text">少しいったところの手前を左に曲がる</div>
   <div class="each-train"><img src="/assets/images/Screenshot_20230910-152632.png" class="access-image">
