--- a/views/kagakubu.erb
+++ b/views/kagakubu.erb
@@ -1,3 +1,27 @@
-<img src="/assets/images/">
-<h1>化学部</h1>
-<p>開催場所:化学実験室</p>
+<script>
+      (function(d) {
+        var config = {
+          kitId: 'bsw3okh',
+          scriptTimeout: 3000,
+          async: true
+        },
+        h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
+      })(document);
+    </script>
+<div class="circle-main">
+   <div class="circle-top">
+      <div class="circle-images">
+         <img src="/assets/images/circle/" alt="化学部">
+      </div>
+      <h1 class="circle-name">
+        化学部
+      </h1>
+      <div class="circle-location">
+         <span class="meta-title">開催場所：</span>
+         <span class="meta-loc"></span>
+         <a class="meta-button">マップ上で確認</a>
+      </div>
+   </div>
+   <p class="circle-text">今年の物理部では主に模造紙による研究や実験などの発表を行います。ぜひ物理講義室へ来て、物理を楽しんで欲しいです！</p>
+
+</div>
