--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html lang="ja">
+<div id="loader">
+    <div class="spinner">
+      <div class="cube1"><img src="/assets/images/logo.png" class="loadimg"></div>
+      <div class="cube2"></div>
+    </div>
+</div>
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,7 +26,9 @@
   <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
   <title>NewERA- 音展2023 | トップページ</title>
 </head>
+
 <body>
+
     <nav class="layout-nav">
         <ul class="layout-ul">
           <li><a href="/">Home</a></li>
