バグ発見一時中断

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="ja">
-<div id="loader">
+<%# <div id="loader">
     <div class="spinner">
       <div class="cube1"><img src="/assets/images/logo.png" class="loadimg"></div>
       <div class="cube2"></div>
     </div>
-</div>
+</div> %>
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
