--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="ja">
-<%# <div id="loader">
+<div id="loader">
     <div class="spinner">
       <div class="cube1"><img src="/assets/images/logo.png" class="loadimg"></div>
       <div class="cube2"></div>
     </div>
-</div> %>
+</div>
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -51,6 +51,12 @@
 </body>
 </html>
 
+<script>
+  window.onload = ()=>{
+  const loader = document.getElementById('loader');
+  loader.classList.add('loaded');
+}
+</script>
 
 
 <!--<script>-->
