--- a/views/timetable.erb
+++ b/views/timetable.erb
@@ -565,7 +565,7 @@
             <td rowspan="2" class="time-event">
               <span class="time-start">14:00~</span>
               <span class="time-end">~14:10</span>
-              ダンス<br>DNA</td>
+              DNA</td>
             <td></td>
             <td></td>
             <td rowspan="4" class="time-event">
@@ -604,7 +604,7 @@
             <td rowspan="2" class="time-event">
               <span class="time-start">14:20~</span>
               <span class="time-end">~14:30</span>
-              歌唱<br>快晴</td>
+              快晴</td>
             <td></td>
             <td></td>
             <td rowspan="8" class="time-event">
