--- a/views/timetable.erb
+++ b/views/timetable.erb
@@ -21,8 +21,8 @@
             <td class="time-title positionsticky">中央<br>ステージ</td>
             <td class="time-title positionsticky">バンド</td>
             <td class="time-title positionsticky">ルーム<br>コンサート</td>
-            <td class="time-title positionsticky">2A</td>
-            <td class="time-title positionsticky">2B</td>
+            <td class="time-title positionsticky">脱出ゲーム</td>
+            <td class="time-title positionsticky">校内謎解き</td>
             <td class="time-title positionsticky">視聴覚室</td>
             <th class="time-nonr positionsticky"></th>
           </tr>
