--- a/views/timetable.erb
+++ b/views/timetable.erb
@@ -21,8 +21,8 @@
             <td class="time-title positionsticky">中央<br>ステージ</td>
             <td class="time-title positionsticky">バンド</td>
             <td class="time-title positionsticky">ルーム<br>コンサート</td>
-            <td class="time-title positionsticky">脱出ゲーム</td>
-            <td class="time-title positionsticky">校内謎解き</td>
+            <td class="time-title positionsticky">2A<br>脱出ゲーム</td>
+            <td class="time-title positionsticky">2B<br>脱出ゲーム</td>
             <td class="time-title positionsticky">視聴覚室</td>
             <th class="time-nonr positionsticky"></th>
           </tr>
@@ -511,7 +511,7 @@
             <td rowspan="2" class="time-event">
               <span class="time-start">13:30~</span>
               <span class="time-end">~13:40</span>
-              歌唱<br>メドレー</td>
+              快晴</td>
             <td></td>
             <td></td>
             <td rowspan="8" class="time-event">
@@ -604,7 +604,7 @@
             <td rowspan="2" class="time-event">
               <span class="time-start">14:20~</span>
               <span class="time-end">~14:30</span>
-              快晴</td>
+              メドレー</td>
             <td></td>
             <td></td>
             <td rowspan="8" class="time-event">
