阪神優勝記念

--- a/views/timetable.erb
+++ b/views/timetable.erb
@@ -181,7 +181,7 @@
             <td rowspan="4" class="time-event">
               <span class="time-start">10:20~</span>
               <span class="time-end">~10:40</span>
-              とある秘密倉庫<br>からの脱出<br>1</td>
+              とある<br>秘密倉庫からの脱出<br>1</td>
             <td></td>
           </tr>
           <tr>
@@ -252,7 +252,7 @@
             <td rowspan="4" class="time-event">
               <span class="time-start">11:00~</span>
               <span class="time-end">~10:20</span>
-              とある秘密倉庫<br>からの脱出<br>2</td>
+              とある<br>秘密倉庫からの脱出<br>2</td>
             <td></td>
             <th rowspan="12" class="time-timer">11:00</th>
           </tr>
@@ -360,7 +360,7 @@
             <td rowspan="4" class="time-event">
               <span class="time-start">12:00~</span>
               <span class="time-end">~12:20</span>
-              とある秘密倉庫<br>からの脱出<br>3</td>
+              とある<br>秘密倉庫からの脱出<br>3</td>
             <td rowspan="12" class="time-event"><span class="time-start">12:00~</span>Xｰmodel<br>ADDITIONAL<br>LIVE<br>2023<span class="time-end">~13:00</span></td>
             <th rowspan="12" class="time-timer">12:00</th>
           </tr>
@@ -424,7 +424,7 @@
             <td rowspan="4" class="time-event">
               <span class="time-start">12:40~</span>
               <span class="time-end">~13:00</span>
-              とある秘密倉庫<br>からの脱出<br>4</td>
+              とある<br>秘密倉庫からの脱出<br>4</td>
           </tr>
           <tr>
             <td rowspan="4" class="time-event-left">
@@ -497,7 +497,7 @@
             <td rowspan="4" class="time-event">
               <span class="time-start">13:20~</span>
               <span class="time-end">~13:45</span>
-              とある秘密倉庫<br>からの脱出<br>5</td>
+              とある<br>秘密倉庫からの脱出<br>5</td>
             <td></td>
           </tr>
           <tr>
@@ -571,7 +571,7 @@
             <td rowspan="4" class="time-event">
               <span class="time-start">14:00~</span>
               <span class="time-end">~14:20</span>
-              とある秘密倉庫<br>からの脱出<br>6</td>
+              とある<br>秘密倉庫からの脱出<br>6</td>
             <td></td>
             <th rowspan="12" class="time-timer time-bot">14:00</th>
           </tr>
@@ -648,7 +648,7 @@
             <td rowspan="4" class="time-event">
               <span class="time-start">14:40~</span>
               <span class="time-end">~15:00</span>
-              とある秘密倉庫<br>からの脱出<br>7</td>
+              とある<br>秘密倉庫からの脱出<br>7</td>
             <td></td>
           </tr>
           <tr>
