メンバーページの名前修正

--- a/views/member.erb
+++ b/views/member.erb
@@ -13,7 +13,7 @@
       <h2 id="members_h2">音展委員</h2>
       <table id="members_table">
         <tr><td>委員長</td><td>岡田一真</td></tr>
-        <tr><td>副委員長</td><td>田中新之助・嶋本葵・大木慶介</td></tr>
+        <tr><td>副委員長</td><td>田中新之助・嶋本葵・大木慶祐</td></tr>
         <tr><td>アドバイザー</td><td>赤曽部岳・西阪優月・上須大己</td></tr>
         <tr><td>事務局長</td><td>林知輝</td></tr>
         <tr><td>喫茶</td><td>西本匠・伊藤<small>太</small>・山道・田中<small>新</small></td></tr>
