--- a/views/map.erb
+++ b/views/map.erb
@@ -17,12 +17,12 @@
         <h1 class="map-title">校内地図</h1>
         <div class="map">
             <div class="map-image">
-                <div id="content1" class="map-content" style="display: block;"><img src="/assets/images/map/1.webp" class="each-map"></div>
-                <div id="content2" class="map-content">コンテンツ2</div>
-                <div id="content3" class="map-content">コンテンツ3</div>
-                <div id="content4" class="map-content">コンテンツ4</div>
-                <div id="content5" class="map-content">コンテンツ5</div>
-                <div id="content6" class="map-content">コンテンツ6</div>
+                <div id="map-content1" class="map-content" style="display: block;"><img src="/assets/images/map/1.webp" class="each-map"></div>
+                <div id="map-content2" class="map-content">コンテンツ2</div>
+                <div id="map-content3" class="map-content">コンテンツ3</div>
+                <div id="map-content4" class="map-content">コンテンツ4</div>
+                <div id="map-content5" class="map-content">コンテンツ5</div>
+                <div id="map-content6" class="map-content">コンテンツ6</div>
             </div>
             <div class="button-container">
             <button class="button" onclick="showDiv(1)" id="button1">南1F</button>
