--- a/views/circle.erb
+++ b/views/circle.erb
@@ -37,7 +37,7 @@
         </div>
         <div class="circle_name">
             <p class="circle_p_name">ESS部</p>
-            <a href="/essbu">bbbbb</a>
+            <a href="/essbu">bbbbb <img src="/assets/images/circle/ess.png" class="circle-img"></a>
         </div>
         <div class="circle_name">
             <p class="circle_p_name">写真部</p>
